물품 등록 기능

--- a/ToyConn_pro/pom.xml
+++ b/ToyConn_pro/pom.xml
@@ -34,6 +34,12 @@
 			<artifactId>tomcat-servlet-api</artifactId>
 			<version>9.0.56</version>
 		</dependency>
+		<!-- cos -->
+      <dependency>
+         <groupId>servlets.com</groupId>
+         <artifactId>cos</artifactId>
+         <version>05Nov2002</version>
+      </dependency>
 	</dependencies>
 	<build>
 		<plugins>
